@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.356 2006/06/07 17:42:27 fanf2 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.357 2006/06/27 13:39:01 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -34,6 +34,10 @@ TF/05 Make it easier to get SMTP authentication and TLS/SSL support working
       configuration file. A little bit of work is required to uncomment the
       directives and define how usernames and passwords are checked, but
       there is now a framework to start from.
+
+PH/01 Added #define LDAP_DEPRECATED 1 to ldap.c because some of the "old"
+      functions that Exim currently uses aren't defined in ldap.h for OpenLDAP
+      without this. I don't know how relevant this is to other LDAP libraries.
 
 
 Exim version 4.62
